package com.lucifer.A08_Bridge;

public interface Brand {
    void open();
    void close();
    void call();
}
