package com.lucifer.A08_Bridge;

public class vivo implements Brand{
    public void open() {
        System.out.println("vivo open");
    }

    public void close() {
        System.out.println("vivo close");
    }

    public void call() {
        System.out.println("vivo call");
    }
}
