package com.lucifer.A08_Bridge;

public class xiaomi implements Brand{
    public void open() {
        System.out.println("xiaomi open");
    }

    public void close() {
        System.out.println("xiaomi close");
    }

    public void call() {
        System.out.println("xiaomi call");
    }
}
